--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-webpack-project",
+	"homepage": "https://tommybluesky.github.io/chat-app-trial",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -8,7 +9,8 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "deploy": "npm run build && gh-pages -d dist -m \"Updates --skip-ci\""
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +30,7 @@
     "@webpack-cli/generators": "^3.0.7",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.2.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
